--- a/Mask_train/README
+++ b/Mask_train/README
@@ -1,2 +1,2 @@
-#Place the Segmentation volumes for testing into this folder
+#Place the Segmentation volumes for training into this folder
 File format: NIFTI (.nii) 
