--- a/Mask_test/README
+++ b/Mask_test/README
@@ -1,1 +1,2 @@
-#Place the Segmentation volume for testing into this folder
+#Place the Segmentation volumes for testing into this folder
+File format: NIFTI (.nii) 
